--- a/webapp/src/app/pacman-features/modules/assets/asset-dashboard/asset-dashboard.component.html
+++ b/webapp/src/app/pacman-features/modules/assets/asset-dashboard/asset-dashboard.component.html
@@ -4,17 +4,34 @@
             <app-text classNames="page-title" text="Asset Summary"></app-text>
         </div>
         <div class="type-count-container flex flex-row">
-            <app-overview-tile class="asset-summary-card" *ngFor="let tile of tiles" [tile]="tile" (navigateTo)="redirectTo($event)"></app-overview-tile>
+            <app-overview-tile
+                class="asset-summary-card"
+                *ngFor="let tile of tiles"
+                [tile]="tile"
+                (navigateTo)="redirectTo($event)"
+            ></app-overview-tile>
         </div>
-        <app-custom-card [card]="card" (graphIntervalSelected)="getAssetsCountData($event)"  [showDateDropdown]="true">
-            <div [class.loader]="totalAssetsCountData.length==0 && totalAssetsCountDataError==''"></div>
-            <app-error-message *ngIf="totalAssetsCountDataError"
-                [selectedValue]="totalAssetsCountDataError"></app-error-message>
+        <app-custom-card
+            [card]="card"
+            (graphIntervalSelected)="getAssetsCountData($event)"
+            [showDateDropdown]="true"
+        >
+            <div
+                [class.loader]="!totalAssetsCountData.length && totalAssetsCountDataError === ''"
+            ></div>
+            <app-error-message
+                *ngIf="totalAssetsCountDataError"
+                [selectedValue]="totalAssetsCountDataError"
+            ></app-error-message>
             <app-multiline-zoom-graph
-                *ngIf="totalAssetsCountData.length>0 && totalAssetsCountDataError==''"
-                [id]="'TotalAssetsSummaryTrend'" [showLegend]="true" [yAxisLabel]="'Count'"
-                [graphHeight]="graphHeight" [graphLinesData]="totalAssetsCountData">
+                *ngIf="totalAssetsCountData.length > 0 && totalAssetsCountDataError === ''"
+                [id]="'TotalAssetsSummaryTrend'"
+                [showLegend]="true"
+                [yAxisLabel]="'Count'"
+                [graphHeight]="graphHeight"
+                [graphLinesData]="totalAssetsCountData"
+            >
             </app-multiline-zoom-graph>
         </app-custom-card>
     </div>
- </div>
+</div>
