--- a/webapp/src/app/shared/components/molecules/overview-tile/overview-tile.component.html
+++ b/webapp/src/app/shared/components/molecules/overview-tile/overview-tile.component.html
@@ -1,30 +1,20 @@
-<div class="tile flex">
-    <div class="tile-wrapper flex flex-col gap-16">
-        <div class="tile-upper-container flex flex-row gap-16">
-            <div class="tile-content flex flex-col gap-8">
-                <div class="tile-title capitalize">{{ tile.mainContent.title }}</div>
-                <div class="tile-count" (click)="redirectTo(tile.mainContent.title)">
-                    <app-text-with-icon
-                        [text]="tile.mainContent.count"
-                        textVariant="headline-3 primary-400"
-                        postImagePath="/assets/icons/Path.svg"
-                        gap="12.5"
-                    ></app-text-with-icon>
-                </div>
-            </div>
-            <div class="tile-img" *ngIf="showIcon">
-                <div class="tile-img-wrapper">
-                    <img src="/assets/icons/{{ tile.mainContent.image }}.svg" alt="" />
-                </div>
+<div class="tile flex flex-col gap-16">
+    <div class="tile-header flex">
+        <img class="tile-header-img" src="/assets/icons/{{ tile.mainContent.image }}.svg" alt="" />
+        <div class="tile-header-content flex flex-align-center gap-8">
+            <div class="tile-header-title capitalize">{{ tile.mainContent.title }}</div>
+            <div class="tile-header-count" (click)="redirectTo(tile.mainContent.title)">
+                <app-text-with-icon
+                    [text]="tile.mainContent.count"
+                    textVariant="subtitle-1 primary-400"
+                    postImagePath="/assets/icons/Path.svg"
+                    gap="8"
+                ></app-text-with-icon>
             </div>
         </div>
-        <div class="tile-lower-container">
-            <div class="tile-details-wrapper flex flex-row">
-                <div class="flex flex-col tile-details gap-8">
-                    <div class="name">{{ tile.subContent.title }}</div>
-                    <div class="count">{{ tile.subContent.count }}</div>
-                </div>
-            </div>
-        </div>
+    </div>
+    <div class="tile-details flex gap-8">
+        <div class="tile-details-name">{{ tile.subContent.title }}</div>
+        <div class="tile-details-count">{{ tile.subContent.count }}</div>
     </div>
 </div>
