--- a/webapp/src/app/pacman-features/modules/notifications/notification-details/notification-details.component.css
+++ b/webapp/src/app/pacman-features/modules/notifications/notification-details/notification-details.component.css
@@ -1,38 +1,42 @@
-.component-wrapper{
+.component-wrapper {
     overflow-y: scroll;
 }
 
-.content-wrapper{
+.content-wrapper {
     height: 100%;
     min-height: 500px;
     background-color: white;
 }
 
-.grid-table{
+.breadcrumb-container {
+    padding-bottom: 18px;
+}
+
+.grid-table {
     display: table;
     border: 1px solid var(--border-200);
     border-radius: 4px;
     max-width: 800px;
 }
 
-.row{
+.row {
     padding: 0 20px;
 }
 
-.border-bottom{
+.border-bottom {
     border-bottom: 1px solid var(--border-100);
 }
 
-.row-wrapper{
+.row-wrapper {
     padding: 20px 0;
 }
 
-.cell{
+.cell {
     min-width: 200px;
     display: table-cell;
 }
 
-.description{
+.description {
     font: var(--text-body-1);
     color: var(--text-high-emphasis);
 }
