--- a/webapp/src/app/pacman-features/modules/notifications/notification-details/notification-details.component.html
+++ b/webapp/src/app/pacman-features/modules/notifications/notification-details/notification-details.component.html
@@ -13,49 +13,36 @@
         <div class="header flex flex-col gap-8">
             <app-text text="Summary" classNames="body-2 low-emphasis"></app-text>
             <div class="flex">
-                <app-text [text]="summaryTitle" classNames="body-1 high-emphasis"></app-text>
+                <app-text [text]="eventName" classNames="body-1 high-emphasis"></app-text>
             </div>
         </div>
-        <div *ngIf="hasDetails" class="details-list grid-table">
-            <div class="row" *ngFor="let detail of eventDetails">
-                <div class="row-wrapper border-bottom" *ngIf="detail.name && detail.value">
-                    <app-text
-                        class="cell"
-                        [text]="detail.name"
-                        classNames="body-1 low-emphasis"
-                    ></app-text>
-                    <div class="cell">
-                        <div
-                            class="description"
-                            *ngIf="detail.name === 'Description'; else nonHTMLValue"
-                        >
-                            <div [innerHTML]="detail.value"></div>
-                        </div>
-                        <ng-template #nonHTMLValue>
-                            <app-text-with-icon
-                                *ngIf="detail.preImgSrc"
-                                [preImagePath]="detail.preImgSrc"
-                                [textVariant]="
-                                    'body-1 ' + (detail.link ? 'primary-400' : 'high-emphasis')
-                                "
-                                [text]="detail.value"
-                            ></app-text-with-icon>
-                            <app-text
-                                (click)="navigateTo(detail.link)"
-                                *ngIf="!detail.preImgSrc"
-                                [class.pointer]="detail.link"
-                                [classNames]="
-                                    'body-1 ' + (detail.link ? 'primary-400' : 'high-emphasis')
-                                "
-                                [text]="detail.value"
-                            ></app-text>
-                        </ng-template>
-                    </div>
-                </div>
-            </div>
+
+        <!-- NOTIFICATION SWITCH -->
+        <div [ngSwitch]="notificationlayoutType">
+            <!-- ACES -->
+            <app-acs-notification *ngSwitchCase="LAYOUTTYPE.ACS"></app-acs-notification>
+            <!--./ACS -->
+
+            <!-- ISSUE -->
+            <app-issue-notification *ngSwitchCase="LAYOUTTYPE.ISSUE"></app-issue-notification>
+            <!--./ISSUE -->
+
+            <!-- VIOLATION -->
+            <app-violation-notification
+                *ngSwitchCase="LAYOUTTYPE.VIOLATIONS"
+            ></app-violation-notification>
+            <!--./VIOLATION -->
+
+            <!-- KEY VALUE -->
+            <app-keyvalue-notification
+                *ngSwitchCase="LAYOUTTYPE.KEYVALUE"
+                [details]="notificationDetails"
+            ></app-keyvalue-notification>
+
+            <!-- JSON -->
+            <ngx-json-viewer *ngSwitchDefault [json]="notificationDetails"> </ngx-json-viewer>
+            <!-- JSON -->
         </div>
-        <div *ngIf="!hasDetails" class="details-list grid-table">
-            <ngx-json-viewer [json]="notificationDetails"></ngx-json-viewer>
-        </div>
+        <!--./NOTIFICATION SWITCH -->
     </div>
 </div>
