feat(violation-notification): initial layout

--- a/webapp/src/app/pacman-features/modules/notifications/notification-details/notification-details.component.html
+++ b/webapp/src/app/pacman-features/modules/notifications/notification-details/notification-details.component.html
@@ -30,6 +30,8 @@
             <!-- VIOLATION -->
             <app-violation-notification
                 *ngSwitchCase="LAYOUTTYPE.VIOLATIONS"
+                [details]="notificationDetails"
+                (navigateTo)="navigateTo($event)"
             ></app-violation-notification>
             <!--./VIOLATION -->
 
