--- a/webapp/src/app/pacman-features/modules/notifications/notification-details/notification-details.component.html
+++ b/webapp/src/app/pacman-features/modules/notifications/notification-details/notification-details.component.html
@@ -28,6 +28,7 @@
             <!-- AWS ISSUE -->
             <app-aws-issue-notification
                 *ngSwitchCase="LAYOUTTYPE.AWS_ISSUE"
+                [details]="notificationDetails"
             ></app-aws-issue-notification>
             <!--./AWS ISSUE -->
 
