--- a/webapp/src/app/pacman-features/modules/notifications/notification-details/paladincloud/violation-notification/violation-notification.component.css
+++ b/webapp/src/app/pacman-features/modules/notifications/notification-details/paladincloud/violation-notification/violation-notification.component.css
@@ -1,11 +1,18 @@
 .violation-table {
-    width: 100%;
+    border-radius: 4px;
+    box-shadow: 0 0 0 1px var(--border-200);
+    width: 800px;
+}
+
+.violation-table tr {
+    border-bottom: 1px solid var(--border-100);
 }
 
 .violation-table td {
-    padding: 8px 8px 8px 0;
+    padding: 20px;
 }
 
 .violation-name {
     width: 20%;
+    color: var(--text-low-emphasis);
 }
