feat(notifications-details): breaklines for issue details

--- a/webapp/src/app/pacman-features/modules/notifications/notification-details/aws/issue-notification/issue-notification.component.html
+++ b/webapp/src/app/pacman-features/modules/notifications/notification-details/aws/issue-notification/issue-notification.component.html
@@ -25,9 +25,10 @@
         <tr class="issue-parameter">
             <td class="issue-name">Description</td>
 
-            <td class="issue-value">
-                {{ details?.latestdescription }}
-            </td>
+            <td
+                class="issue-value"
+                [innerHTML]="details?.latestdescription | notificationDetails"
+            ></td>
         </tr>
     </tbody>
 </table>
