feat(notification-details): redhat acs notification layout

--- a/webapp/src/app/pacman-features/modules/notifications/notification-details/notification-details.component.html
+++ b/webapp/src/app/pacman-features/modules/notifications/notification-details/notification-details.component.html
@@ -22,6 +22,7 @@
             <!-- REDHAT ACS -->
             <app-redhat-acs-notification
                 *ngSwitchCase="LAYOUTTYPE.REDHAT_ACS"
+                [details]="notificationDetails"
             ></app-redhat-acs-notification>
             <!--./REDHAT ACS -->
 
