feat(notification-details): updated acs notification-view

--- a/webapp/src/app/pacman-features/modules/notifications/notification-details/aws/issue-notification/issue-notification.component.html
+++ b/webapp/src/app/pacman-features/modules/notifications/notification-details/aws/issue-notification/issue-notification.component.html
@@ -1,3 +1,8 @@
+<div class="header flex">
+    <div class="header-text">
+        {{ title }}
+    </div>
+</div>
 <table class="issue-table body-1 high-emphasis">
     <tbody>
         <tr class="issue-parameter">
